[tool.poetry]
name = "rootly"
version = "1.1.0"
description = "A client library for accessing Rootly API v1"
authors = []
readme = "README.md"
packages = [
    { include = "rootly_sdk" },
]
include = ["CHANGELOG.md", "rootly_sdk/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.24.0,<0.29.0"
attrs = ">=24.1.0"
python-dateutil = "^2.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
